# study-master-degree

./: .gitignore
Semester_2/ImageProcessing/: Lab_02.py  (+10 more)
Semester_2/СollectionAndProcessingInformation/parser/: pyproject.toml
Semester_2/СollectionAndProcessingInformation/parser/src/abstract_parser/: abstract_parser.py
Semester_2/СollectionAndProcessingInformation/parser/src/djvu_parser/: djvu_parser.py
Semester_2/СollectionAndProcessingInformation/parser/src/doc_parser/: doc_parser.py
Semester_2/СollectionAndProcessingInformation/parser/src/docx_parser/: docx_parser.py  main.py
Semester_2/СollectionAndProcessingInformation/parser/src/pdf_parser/: main.py  pdf_parser.py
Semester_2/СollectionAndProcessingInformation/parser/src/utils/: path_checker.py  txt_writer.py
Semester_2/СollectionAndProcessingInformation/parser_all/: pyproject.toml
Semester_2/СollectionAndProcessingInformation/parser_all/files/: test.html
Semester_2/СollectionAndProcessingInformation/parser_all/files/outputs/: test.txt  test_links.txt
Semester_2/СollectionAndProcessingInformation/parser_all/src/: main.py
Semester_2/СollectionAndProcessingInformation/parser_all/src/abstract_parser/: abstract_parser.py
Semester_2/СollectionAndProcessingInformation/parser_all/src/doc_parser/: main.py
Semester_2/СollectionAndProcessingInformation/parser_all/src/docx_parser/: docx_parser.py  main.py
Semester_2/СollectionAndProcessingInformation/parser_all/src/html_parser/: html_parser.py  main.py
Semester_2/СollectionAndProcessingInformation/parser_all/src/pdf_parser/: main.py  pdf_parser.py
(+374 files in other folders)
